updated style paths to relative paths

--- a/wp-content/themes/hfkasta/style/_nav.scss
+++ b/wp-content/themes/hfkasta/style/_nav.scss
@@ -118,7 +118,7 @@ nav {
                     margin: 0 0 4px 6px;
                     height: $icon-height;
                     width: $icon-height + 2;
-                    background: url('/hfkasta/wp-content/themes/hfkasta/assets/dropdown.svg') no-repeat center center;
+                    background: url('../assets/dropdown.svg') no-repeat center center;
                     transform: rotate(0deg);
                     transition: transform $transition-time;
 
