--- a/wp-content/themes/hfkasta/style/style.scss
+++ b/wp-content/themes/hfkasta/style/style.scss
@@ -11,18 +11,18 @@ $border-weight: 3px;
     font-family: 'GT Haptik Regular';
     font-style: normal;
     font-weight: normal;
-    src: url(/hfkasta/wp-content/themes/hfkasta/assets/font/gt-haptik-regular.otf),
-        url(/hfkasta/wp-content/themes/hfkasta/assets/font/gt-haptik-regular.woff),
-        url(/hfkasta/wp-content/themes/hfkasta/assets/font/gt-haptik-regular.woff2);
+    src: url(../assets/font/gt-haptik-regular.otf),
+        url(../assets/font/gt-haptik-regular.woff),
+        url(../assets/font/gt-haptik-regular.woff2);
 }
 
 @font-face {
     font-family: 'GT Haptik Bold';
     font-style: normal;
     font-weight: black;
-    src: url(/hfkasta/wp-content/themes/hfkasta/assets/font/gt-haptik-bold.otf),
-        url(/hfkasta/wp-content/themes/hfkasta/assets/font/gt-haptik-bold.woff),
-        url(/hfkasta/wp-content/themes/hfkasta/assets/font/gt-haptik-bold.woff2);
+    src: url(../assets/font/gt-haptik-bold.otf),
+        url(../assets/font/gt-haptik-bold.woff),
+        url(../assets/font/gt-haptik-bold.woff2);
 }
 
 // Imports
@@ -152,7 +152,7 @@ a {
     main .content a::before {
         width: 1rem;
         height: 1rem;
-        background: url('/hfkasta/wp-content/themes/hfkasta/assets/link_content.svg') no-repeat center center;
+        background: url('../assets/link_content.svg') no-repeat center center;
         margin: 0 2px -2px 4px;
     }
 
@@ -166,7 +166,7 @@ a {
         &::before {
             width: 1.2rem;
             height: 1.2rem;
-            background: url('/hfkasta/wp-content/themes/hfkasta/assets/link_sidebar.svg') no-repeat center center;
+            background: url('../assets/link_sidebar.svg') no-repeat center center;
             margin: 0 4px 0 0;
             top: 50%;
             left: 0;
