--- a/style/_nav.scss
+++ b/style/_nav.scss
@@ -1,6 +1,7 @@
 $search-bar-height: 40px;
 $icon-height: 18px;
 $nav-width: 350px;
+$search-form-padding: 5px;
 
 .hamburger.hamburger--squeeze {
     position: fixed;
@@ -31,11 +32,12 @@ nav {
         height: $search-bar-height;
         width: 100%;
         position: relative;
+        margin-left: -$search-form-padding;
 
         .search-field {
-            width: calc(100% - 30px);
+            width: 100%;
             height: 100%;
-            padding: 5px;
+            padding: $search-form-padding;
             border: 0;
             border-radius: 0;
             background: #fff;
@@ -90,7 +92,7 @@ nav {
             background: none;
             border: 0;
             position: absolute;
-            right: -5px;
+            right: 10px;
         }
     }
 
@@ -261,14 +263,14 @@ nav {
     .page-elevator {
         position: fixed;
         display: block;
-        left: 70%;
+        left: -40px;
         bottom: $footer-height + 20px;
         width: 20px;
         height: auto;
         transition: left .5s ease;
 
         &.show {
-            left: calc(70% - 60px);
+            left: 20px;
         }
 
         &:hover {
