--- a/style/style.css
+++ b/style/style.css
@@ -21,25 +21,26 @@
 
 nav {
   position: absolute;
-  width: 350px;
+  width: 460px;
   min-height: 100%;
-  right: -350px;
+  right: -460px;
   top: 0;
   background: #fff;
   color: #5a00be;
   border-left: 2px solid #5a00be;
   z-index: 30;
   transition: right 0.5s ease;
-  padding: 100px 20px 20px 20px;
+  padding: 2rem;
   box-sizing: border-box; }
   nav.is-open {
     right: 0; }
   nav .search-form {
     height: 40px;
     width: 100%;
-    position: relative; }
+    position: relative;
+    margin-left: -5px; }
     nav .search-form .search-field {
-      width: calc(100% - 30px);
+      width: 100%;
       height: 100%;
       padding: 5px;
       border: 0;
@@ -77,7 +78,7 @@ nav {
       background: none;
       border: 0;
       position: absolute;
-      right: -5px; }
+      right: 10px; }
   nav ul {
     padding: 0; }
     nav ul li {
@@ -159,7 +160,6 @@ nav .sidebar_note {
 
   nav {
     position: relative;
-    padding-top: 20px;
     margin: 0;
     right: auto; }
     nav ul li a {
@@ -173,13 +173,13 @@ nav .sidebar_note {
   .page-elevator {
     position: fixed;
     display: block;
-    left: 70%;
+    left: -40px;
     bottom: 80px;
     width: 20px;
     height: auto;
     transition: left .5s ease; }
     .page-elevator.show {
-      left: calc(70% - 60px); }
+      left: 20px; }
     .page-elevator:hover {
       cursor: pointer; } }
 footer {
@@ -375,7 +375,34 @@ footer {
       font-weight: bold;
       line-height: 0; }
 
-*, *::before, *::after {
+main .content a,
+nav .sidebar_note a {
+  color: #d50e31; }
+  main .content a::before,
+  nav .sidebar_note a::before {
+    content: '';
+    position: relative;
+    display: inline-block; }
+  main .content a:hover,
+  nav .sidebar_note a:hover {
+    color: #5a00be; }
+
+nav .menu a,
+footer .menu a {
+  color: #5a00be; }
+  nav .menu a:hover,
+  footer .menu a:hover {
+    color: #d50e31; }
+
+main .content a::before,
+nav .sidebar_note a::before {
+  width: 1rem;
+  height: 1rem;
+  margin: 0 2px -2px 4px; }
+
+*,
+*::before,
+*::after {
   box-sizing: inherit;
   -webkit-font-smoothing: antialiased;
   word-break: break-word;
@@ -391,7 +418,7 @@ body {
   min-width: 100%;
   min-height: 100%;
   height: 100%;
-  font-size: 18px; }
+  font-size: 16px; }
 
 h1,
 h2,
@@ -428,13 +455,12 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'GT Haptik', sans-serif;
+  font-family: 'GT Haptik Regular', sans-serif;
   font-weight: normal; }
 
 h1 {
   margin-top: 0;
-  font-size: 1.4rem;
-  /*padding-right: 40px;*/ }
+  font-size: 1.4rem; }
 
 a {
   text-decoration: none;
@@ -463,7 +489,7 @@ pre {
 
 .entry-content > *:not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright):not(.is-style-wide),
 .post {
-  max-width: 58rem;
+  max-width: 52rem;
   width: calc(100% - 14rem); }
 
 .post {
@@ -476,7 +502,8 @@ pre {
 .post-inner .entry-content > *:not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright):not(.is-style-wide) {
   width: calc(100% - 2rem); }
 
-.entry-content p, .entry-content li {
+.entry-content p,
+.entry-content li {
   line-height: 1.4;
   font-size: 1.6rem; }
 
@@ -523,35 +550,6 @@ pre {
     .wrapper main .content_note {
       padding: 20px; }
 
-.wrapper main .content a,
-.wrapper nav .sidebar_note a {
-  color: #d50e31; }
-  .wrapper main .content a::before,
-  .wrapper nav .sidebar_note a::before {
-    content: '';
-    position: relative;
-    display: inline-block; }
-.wrapper main .content a::before {
-  width: 1rem;
-  height: 1rem;
-  background: url("../assets/link_content.svg") no-repeat center center;
-  margin: 0 2px -2px 4px; }
-.wrapper nav .sidebar_note a {
-  height: 100%;
-  position: relative;
-  padding-left: 1.8rem;
-  display: block;
-  box-sizing: border-box; }
-  .wrapper nav .sidebar_note a::before {
-    width: 1.2rem;
-    height: 1.2rem;
-    background: url("../assets/link_sidebar.svg") no-repeat center center;
-    margin: 0 4px 0 0;
-    top: 50%;
-    left: 0;
-    position: absolute;
-    margin-top: -.6rem; }
-
 footer {
   margin-top: -60px; }
 
@@ -565,7 +563,11 @@ body.search-results .wrapper main .content {
 @media (min-width: 768px) {
   .wrapper {
     width: 100%;
-    display: flex; }
+    display: flex;
+    /*        nav {
+                flex-basis: 30%;
+                min-width: 300px;
+            }*/ }
     .wrapper main {
       flex-basis: 70%; }
       .wrapper main h1 {
@@ -595,9 +597,6 @@ body.search-results .wrapper main .content {
           margin: 0; }
       .wrapper main .to_note {
         display: none; }
-    .wrapper nav {
-      flex-basis: 30%;
-      min-width: 300px; }
 
   body.search-results .wrapper main .content section {
     margin: 130px auto 0 auto; } }
