--- a/style/style.scss
+++ b/style/style.scss
@@ -35,7 +35,7 @@ body {
     min-width: 100%;
     min-height: 100%;
     height: 100%;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 h1,
@@ -118,7 +118,7 @@ pre {
 
 .entry-content>*:not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright):not(.is-style-wide),
 .post {
-    max-width: 58rem;
+    max-width: 52rem;
     width: calc(100% - 14rem);
 }
 
@@ -270,10 +270,10 @@ body.search-results {
             }
         }
 
-        nav {
+/*        nav {
             flex-basis: 30%;
             min-width: 300px;
-        }
+        }*/
     }
 
     body.search-results {
