--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -1,8 +1,12 @@
 // Variables
 $brand-primary-color: #5a00be;
 $brand-secondary-color: #d50e31;
+$contrast-primary-color: #fff;
+$contrast-secondary-color: #fff;
+$text-color: $brand-primary-color;
 $transition-time: .5s;
 $border-weight: 2px;
+$base-font: 'GT Haptik', sans-serif;
 
 // Font Sizes
 $mobile-h1-font-size: 2.625rem; // Used for top heading
