--- a/style/_ticker.scss
+++ b/style/_ticker.scss
@@ -1,5 +1,3 @@
-$duration: 30s;
-
 .ticker-wrap {
     width: 100%;
     overflow: hidden;
@@ -15,24 +13,35 @@ $duration: 30s;
         font-size: 1.4rem;
         white-space: nowrap;
         box-sizing: content-box;
-        margin-top: 2px;
         position: absolute;
 
         // The animation for the ticker is located in the footer.php because it needs a JS Variable
+        // The time for the animation is located in the footer.php because it needs a JS Variable
         -webkit-animation-iteration-count: infinite;
         animation-iteration-count: infinite;
         -webkit-animation-timing-function: linear;
         animation-timing-function: linear;
         -webkit-animation-name: ticker;
         animation-name: ticker;
-        -webkit-animation-duration: $duration;
-        animation-duration: $duration;
 
         div {
             display: inline-block;
             color: $brand-primary-color;
             font-weight: bold;
             line-height: 0;
+
+            a:hover p {
+                color: $brand-secondary-color;
+            }
+        }
+
+        .news_seperator {
+            font-family: 'GT Haptik Bold', sans-serif;
+        }
+
+        // Pause ticker on hover
+        &:hover {
+            animation-play-state: paused;
         }
     }
 }
