--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -26,7 +26,7 @@ $ticker-height: 40px;
 $language-menu-rotation: 12deg;
 
 // Sidebar
+$sidebar-width: 320px;
 $search-bar-height: 40px;
 $icon-height: 18px;
-$nav-width: 350px;
 $search-form-padding: 5px;
